--- a/style.css
+++ b/style.css
@@ -1,65 +1,71 @@
 .page {
+  font-family: Montserat;
   margin: 0;
-}
-
-.content {
-  font-family: 'IBM Plex Sans', Helvetica, Arial, sans-serif;
-  max-width: 720px;
-  margin: 0 auto;
-  padding-top: 40px;
-  background-image: url('https://code.s3.yandex.net/web-code/entrance-test/Union.png');
-  background-size: cover;
-  background-position: center;
-}
-
-.content__text {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 20px;
-  text-align: center;
-  color: #0C0C0D;
-  margin: 40px auto 20px;
-}
-
-.content__text:first-child {
-  margin-top: 0;
-}
-
-.form {
-  width: fit-content;
-  margin: 0 auto;
-}
-
-.form__input {
-  width: 480px;
-  margin: 0;
-  padding: 11px 20px;
-  border: 1px solid #3C39EC;
-  border-radius: 0px;
   box-sizing: border-box;
-  outline: none;
+  padding: 0 24px;
 }
 
-.content__image {
-  background-image: url('https://code.s3.yandex.net/web-code/entrance-test/Party.png');
-  background-size: cover;
-  background-position: center;
-  width: 720px;
-  height: 480px;
+.header {
   display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  min-height: 52px;
 }
 
-.content__result {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 176px;
-  line-height: 176px;
+.header__logo {
+  margin: 0;
+  text-transform: uppercase;
+  font-weight: 900;
+  letter-spacing: 0.5em;
+}
+
+.page__catalog {
+  margin-top: 32px;
+}
+
+.catalog {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 324px);
+  column-gap: 24px;
+  row-gap: 48px;
+  justify-content: center;
+}
+
+.catalog__item {
+  width: 324px;
+}
+
+.card__image {
+  width: 100%;
+  height: 216px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.card__description {
+  padding: 12px;
+  box-sizing: border-box;
   text-align: center;
-  color: #3C39EC;
-  margin: auto;
 }
 
-#congratulation {
-  padding-bottom: 40px;
+.card__title {
+  margin: 0;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 20px
+}
+
+.card__info {
+  font-size: 14px;
+  color: #0C0C0D;
+  margin: 8px 0 0;
+  opacity: 0.4;
+}
+
+.card__price {
+  margin: 8px 0 0;
+  font-size: 18px;
+  line-height: 32px;
+  color: #A98B5F;
+  font-weight: bold;
 }
