--- a/style.css
+++ b/style.css
@@ -1,71 +1,74 @@
 .page {
-  font-family: Montserat;
   margin: 0;
-  box-sizing: border-box;
-  padding: 0 24px;
+  font-family: Inter;
+  background-color: #3C39EC;
 }
 
 .header {
+  min-height: 116px;
   display: flex;
   justify-content: center;
-  align-items: flex-end;
-  min-height: 52px;
+  align-items: center;
 }
 
 .header__logo {
-  margin: 0;
-  text-transform: uppercase;
-  font-weight: 900;
-  letter-spacing: 0.5em;
-}
-
-.page__catalog {
-  margin-top: 32px;
+  width: 43px;
 }
 
 .catalog {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, 324px);
-  column-gap: 24px;
-  row-gap: 48px;
-  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.catalog__item {
-  width: 324px;
+.page__catalog {
+  width: 70%;
+  margin: auto;
+}
+.card {
+  flex-grow: 1;
+  flex-basis: 20%;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.catalog__card {
+  margin-right: 10px;
+  margin-left: 10px;
+  margin-bottom: 20px;
 }
 
 .card__image {
   width: 100%;
-  height: 216px;
-  object-fit: cover;
-  object-position: center;
-}
-
-.card__description {
-  padding: 12px;
-  box-sizing: border-box;
-  text-align: center;
-}
-
-.card__title {
-  margin: 0;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 20px
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
 }
 
 .card__info {
-  font-size: 14px;
-  color: #0C0C0D;
-  margin: 8px 0 0;
-  opacity: 0.4;
+  box-sizing: border-box;
+  padding: 10px;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
 }
 
-.card__price {
-  margin: 8px 0 0;
-  font-size: 18px;
-  line-height: 32px;
-  color: #A98B5F;
-  font-weight: bold;
+.card__info_theme_dark {
+  background-color: #000;
+  color: #fff;
+}
+
+.card__info_theme_light {
+  background-color:#fff;
+  color: #000;
+}
+
+.card__title {
+  font-size: 16px;
+  line-height: 20px;
+  margin: 0 0 5px;
+}
+
+.card__text {
+  font-size: 12px;
+  line-height: 16px;
+  margin: 0 0 5px;
 }
